--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1,106 +1,106 @@
 ---
 images:
-- name: downtheline-downtheline-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-mucha-mult.jpg
-- name: bluelake-oily-mcoilface-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-00-00-00.jpg
-- name: gypsy-wagon-gypsywagon-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-sand-paper.jpg
-- name: old-granary-field-granaryfield-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-far-away.jpg
-- name: status-berlin-status-berlin-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-china-prop.jpg
-- name: bf-skinner-dark-hallway-in-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-dark-hallway-in-hotel.jpg
-- name: aws-s3-square-C18YCQlUUAQjxRe.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C18YCQlUUAQjxRe.jpg
-- name: legal-statue-legalstatue-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-really-hot.jpg
-- name: curtain-curtain-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-graham-sutherland.jpg
-- name: white-house-lawn-white-house-window-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-dream.jpg
-- name: copper-circuit-old-building-and-cars_36680898846_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-and-cars_36680898846_o.jpg
-- name: containership-containership-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-marcel-duchamp.jpg
-- name: beach-clouds-lifeguard-beachclouds-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-sunday.jpg
-- name: oldroad-old-road-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crafty-painting.jpg
-- name: nazi-invasion-dragon-turning-head.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dragon-turning-head.jpg
-- name: white-house-lawn-white-house-lawn-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-ww2-color.jpg
-- name: aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
-- name: powerlines-power-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-monet-one.jpg
-- name: yosemite-yosemite-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-internet-numbers.jpg
-- name: san-francisco-street-view-san-francisco-street-view-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dali-two.jpg
-- name: old-granary-field-granaryfield-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dali-three.jpg
-- name: old-church-oldchurch-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-missle.jpg
-- name: wall-cannon-wall-cannon-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon-blue-circuit.jpg
-- name: eduardo-eduardo-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-rainbow-festival.jpg
-- name: old-cabin-oldcabin-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-granite.jpg
-- name: powerlines-power-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-mucha-mult.jpg
-- name: abandonedbuildings_smooth_ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_smooth_ride.jpg
-- name: curtain-curtain-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-mucha-mult.jpg
-- name: old-barn-old-barn-1500-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-brush.jpg
-- name: stalin-time-sailboat-in-front-of-housing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-sailboat-in-front-of-housing.jpg
-- name: curtain-curtain-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-emily-carr.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-jap-wav-pr.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-jap-wav-pr.JPG
-- name: blossombar-clean-view-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-24-99.jpg
-- name: downtown-trucksilo-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-yellow-paper.jpg
-- name: gypsymosaic-gypsy-eyes-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-alien-goggles.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-propaganda-leaflets.jpg
-- name: mistywoods-babyfoot-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-purp-paper.jpg
-- name: locked-up-steam-lock-up-steam-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-free-woman.jpg
-- name: machine-road-machine-road-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dark-rain.jpg
-- name: adam-smith-adam-smith-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-umberto-bocc.jpg
-- name: nazi-invasion-down-side-street-shop-sign.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-down-side-street-shop-sign.jpg
-- name: store-on-corner-store-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-clean-view.jpg
-- name: powerlines-power-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-clean-view.jpg
+- name: curtain-curtain-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-spagetti-accident.jpg
+- name: old-church-oldchurch-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-bright-sand.jpg
+- name: nazi-invasion-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-google-front-of-business.jpg
+- name: curtain-curtain-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-gan-vogh.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-matrix.JPG
+- name: old-gas-pumps-oldgaspumps-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-yellow-collage.jpg
+- name: copper-circuit-flowers-diamon-creek.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-flowers-diamon-creek.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
+- name: castle-wall-DSC-0067-colored-circuits.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-colored-circuits.JPG
+- name: aws-s3-stories-internet-gauages-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-internet-gauages-3.jpg
+- name: nazi-invasion-docs-cranes-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-docs-cranes-waterfront.jpg
+- name: curtain-curtain-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-ww2-dresden.jpg
+- name: mediterranean-mediterranean-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-crafty-painting.jpg
+- name: la-muse-fat-old-pigeon-on-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-fat-old-pigeon-on-fence.jpg
+- name: oldtrain-oldtrain-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-mucha-mult.jpg
+- name: bf-skinner-san-francisco-wharf-clock.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-san-francisco-wharf-clock.jpg
+- name: nazi-invasion-wild-gease-in-the-water.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-wild-gease-in-the-water.jpg
 - name: blossombar-crafty-painting-file-00-00-50-12.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-12.jpg
-- name: crow_neo_instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_neo_instinct.jpg
-- name: cargo-ship-cargo-ship-on-sea-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-dali.jpg
-- name: downtheline-downtheline-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-electricity.jpg
-- name: old-door-lock-old-door-lock-2-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-oily-mcoilface.jpg
-- name: oldhouse-granaryfield-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-smoking-cigarette.jpg
-- name: locked-up-steam-lock-up-steam-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-jap-wav-pr.jpg
-- name: stalin-time-small-town-street-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-small-town-street-2.jpg
+- name: carry-load-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dali-three.jpg
+- name: downtown-trucksilo-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-plentiful.jpg
+- name: window-window-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-internet-numbers.jpg
+- name: powerlines-power-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-monet-one.jpg
+- name: powerlines-power-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-wols.jpg
+- name: bf-skinner-path-in-woods-green-lush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-path-in-woods-green-lush.jpg
+- name: gypsy-wagon-gypsywagon-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-space-pizza.jpg
+- name: old-gas-pumps-oldgaspumps-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dali-three.jpg
+- name: copper-circuit-downtown-sidewalk-washington.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-sidewalk-washington.jpg
+- name: fence-fence-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-creativity.jpg
+- name: copper-circuit-fishing-ship-in-docks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-fishing-ship-in-docks.jpg
+- name: dc-statue-dcstatue-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-bright-sand.jpg
+- name: copper-circuit-pink-elephant-car-wash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-pink-elephant-car-wash.jpg
+- name: bf-skinner-train-in-station-two-coming.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-in-station-two-coming.jpg
+- name: oldsmallboat-oldsmallboat-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-rainbow-festival.jpg
+- name: window-window-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-sunday.jpg
+- name: sand-hand-sand-hand-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-alien-goggles.jpg
+- name: lincoln-memorial-lincolnmemorial-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-wols.jpg
+- name: bf-skinner-walk-through-garden-tunnel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-walk-through-garden-tunnel.jpg
+- name: nazi-invasion-DSC_0048.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0048.jpg
+- name: white-house-lawn-white-house-lawn-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-smoking-cigarette.jpg
+- name: stalin-time-downtown-sidewalk-washington.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-downtown-sidewalk-washington.jpg
+- name: gypsymosaic-gypsy-eyes-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-oily-mcoilface.jpg
+- name: san-francisco-street-view-san-francisco-street-view-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-wols.jpg
+- name: yuma-bank-yuma-bak.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak.jpg
+- name: cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
+- name: yuma-bank-yuma-bak-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-creativity.jpg
+- name: downtown-fredericksburg-dark-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-dark-dali.JPG
+- name: window-window-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-alberto-giacometti.jpg
+- name: razorwire-DSC-0080-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-marcel-duchamp.jpg
+- name: rockingchair-rockingchair-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-diego-rivera1.jpg
+- name: dragon-desert-desert-dragon-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit.jpg
+- name: gears-4882162452-fa3126b38d-b-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-marcel-duchamp.jpg
 ---
 
